[gd_scene load_steps=7 format=2]

[ext_resource path="res://ChapterChoice.gd" type="Script" id=1]
[ext_resource path="res://fonts/amon_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 2

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.92549, 0.929412, 0.94902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ChapterChoice" type="Panel"]
margin_right = 446.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NBChapitre" type="Label" parent="."]
margin_left = 337.405
margin_top = 9.64857
margin_right = 379.405
margin_bottom = 74.6486
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "XXX
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 164.0
margin_top = 2.0
margin_right = 325.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.760784, 0.666667, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="Panel" parent="."]
margin_left = 387.249
margin_top = 3.36737
margin_right = 427.249
margin_bottom = 43.3674
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="click"]
margin_left = 14.856
margin_top = 4.61726
margin_right = 54.856
margin_bottom = 35.6173
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Button" type="TextureButton" parent="click"]
margin_right = 40.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlreadySeenPolygon" type="Polygon2D" parent="."]
position = Vector2( -22.5136, 0.529732 )
color = Color( 0.619608, 0.658824, 0.705882, 1 )
polygon = PoolVector2Array( 28.1169, 47.9916, 41.6251, -0.0815163, 58.0468, -0.0815163, 44.2124, 48.0062 )

[node name="Label" type="Label" parent="AlreadySeenPolygon"]
margin_left = 29.217
margin_top = 45.6984
margin_right = 78.217
margin_bottom = 59.6984
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Déjà Vu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SessionSeenPolygon" type="Polygon2D" parent="."]
position = Vector2( 2.07602, 0.578602 )
color = Color( 0.619608, 0.658824, 0.705882, 1 )
polygon = PoolVector2Array( 28.1169, 47.9916, 41.6251, -0.0815163, 58.0468, -0.0815163, 44.2124, 48.0062 )

[node name="Label" type="Label" parent="SessionSeenPolygon"]
margin_left = 29.217
margin_top = 45.6984
margin_right = 78.217
margin_bottom = 59.6984
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ce Billy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatPolygon" type="Polygon2D" parent="."]
position = Vector2( 25.5788, 0.544044 )
color = Color( 0.619608, 0.658824, 0.705882, 1 )
polygon = PoolVector2Array( 28.1169, 47.9916, 41.6251, -0.0815163, 58.0468, -0.0815163, 44.2124, 48.0062 )

[node name="Label" type="Label" parent="CombatPolygon"]
margin_left = 29.217
margin_top = 45.6984
margin_right = 78.217
margin_bottom = 59.6984
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Combat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndPolygon" type="Polygon2D" parent="."]
position = Vector2( 50.2198, 0.531052 )
color = Color( 0.619608, 0.658824, 0.705882, 1 )
polygon = PoolVector2Array( 28.1169, 47.9916, 41.6251, -0.0815163, 58.0468, -0.0815163, 44.2124, 48.0062 )

[node name="Label" type="Label" parent="EndPolygon"]
margin_left = 29.217
margin_top = 45.6984
margin_right = 78.217
margin_bottom = 59.6984
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Fin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessPolygon" type="Polygon2D" parent="."]
position = Vector2( 74.9835, 0.592384 )
color = Color( 0.619608, 0.658824, 0.705882, 1 )
polygon = PoolVector2Array( 28.1169, 47.9916, 41.6251, -0.0815163, 58.0468, -0.0815163, 44.2124, 48.0062 )

[node name="Label" type="Label" parent="SuccessPolygon"]
margin_left = 29.217
margin_top = 45.6984
margin_right = 78.217
margin_bottom = 59.6984
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Succès"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretPolygon" type="Polygon2D" parent="."]
position = Vector2( 99.7867, 0.448215 )
color = Color( 0.619608, 0.658824, 0.705882, 1 )
polygon = PoolVector2Array( 28.1169, 47.9916, 41.6251, -0.0815163, 58.0468, -0.0815163, 44.2124, 48.0062 )

[node name="Label" type="Label" parent="SecretPolygon"]
margin_left = 29.217
margin_top = 45.6984
margin_right = 78.217
margin_bottom = 59.6984
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Secret"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="click/Button" to="." method="_on_Button_pressed"]
